package SmartHome.domain;

public interface Value {
}
