@startuml
!pragma layout smetana

package SmartHome.sensors {

    class PercentagePositionSensor {
        - final _sensorType : SensorType
        - _value : PercentagePositionSensorValue
        + PercentagePositionSensor (catalogue : CatalogueSensor)
        + setSensorType (catalogue : CatalogueSensor)
        + getSensorType() : SensorType
        + getValue() : Value
    }

    class PercentagePositionSensorValue  implements SmartHome.domain.Value {
        - _percented : Double
        + PercentagePositionSensorValue (percented : double)
        + toString() : String
    }

}

package SmartHome.domain {

    interface Sensor {
        + getSensorType() : SensorType
        + getValue() : Value
    }

    class SensorType {
        - _description : String
        - _unit : Unit
        # SensorType(description : String, unit : Unit)
        + getDescription() : String
        + getUnit() : Unit
    }

    interface Value {
    }

    class CatalogueSensor {
        + getSensorType(description : String) : SensorType
    }
}

SmartHome.sensors.PercentagePositionSensor  ..|> SmartHome.domain.Sensor
SmartHome.sensors.PercentagePositionSensor  "1" --> "1" SmartHome.domain.SensorType : has a
SmartHome.sensors.PercentagePositionSensor  "1" --> "1" SmartHome.sensors.PercentagePositionSensorValue : contains
SmartHome.sensors.PercentagePositionSensor  "1" ..> "1" SmartHome.domain.CatalogueSensor : uses
SmartHome.sensors.PercentagePositionSensor  ..|> SmartHome.domain.Value
@enduml